Next entries in swagger.yaml
